[package]
name = "forexpros_wss"
version = "0.2.4"
authors = ["Supot Chainiramitkul <bingli224@gmail.com>"]
edition = "2018"

keywords = ["websocket", "websockets", "async", "tokio", "serde"]
caterogies = ["asynchronus", "network-programming", "web-programming", "web-programming::websocket"]

[lib]
name = "forexpros_wss"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = '1.0.117', features = [ 'derive' ] }
serde_json = '1.0.60'

futures = '0.3.8'
futures-util = '0.3.8'

tokio = { version = '1.26.0', features = [ 'rt', 'rt-multi-thread', 'time' ] }

tungstenite = "0.18.0"
tokio-tungstenite = { version = "0.18.0", features = [ "native-tls" ] }

rand = '0.8.5'

#[dev-dependencies]
regex = '1.4.2'